--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,10 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Recipe Project</title>
+        <title>Lasagna recipe</title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        
+        <h1>Lasagna Recipe</h1>
     </body>
 </html>
