Add description, ingredients and steps to perform the recipe

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,5 +8,28 @@
     <body>
         <h1>Lasagna Recipe</h1>
         <a href="../index.html">Lasagna</a>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/f/fe/Lasagna_with_salad%2C_May_2011.jpg" alt="Delicious lasagna">
+        <h2>Description</h2>
+        <p>Lasagna is the ultimate comfort food—a rich, layered dish of pasta sheets, creamy béchamel sauce, hearty meat or vegetables, and plenty of melted cheese. 
+            Whether you prefer a classic Italian version or a modern twist, lasagna never fails to satisfy. 
+            Just remember: if you're making extra, hide it well... 
+            unless you want to share with Garfield, who famously said, “Diet? I thought you said ‘buy it’—and make it lasagna!”</p>
+        <h2>Ingredients</h2>
+            <ul>
+                <li>Lasagna noodles</li>
+                <li>Marinara sauce</li>
+                <li>Mozzarella cheese</li>
+                <li>Ground beef</li>
+                <li>Salt and pepper</li>
+            </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Cook the ground beef – In a pan, cook the ground beef with a bit of salt and pepper until browned. Drain excess fat.</li>
+            <li>Prepare the sauce – Add marinara sauce to the cooked beef and let it simmer for a few minutes to blend the flavor</li>
+s.
+            <li>Layer the lasagna – In a baking dish, layer noodles, meat sauce, and mozzarella cheese. Repeat the layers until ingredients are used up, finishing with mozzarella on top.</li>
+            <li>Bake – Cover with foil and bake at 375°F (190°C) for about 25-30 minutes. Uncover and bake another 10 minutes until cheese is melted and bubbly.</li>
+        </ol>
+
     </body>
 </html>
