--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -25,8 +25,7 @@
         <h2>Steps</h2>
         <ol>
             <li>Cook the ground beef – In a pan, cook the ground beef with a bit of salt and pepper until browned. Drain excess fat.</li>
-            <li>Prepare the sauce – Add marinara sauce to the cooked beef and let it simmer for a few minutes to blend the flavor</li>
-s.
+            <li>Prepare the sauce – Add marinara sauce to the cooked beef and let it simmer for a few minutes to blend the flavors.</li>
             <li>Layer the lasagna – In a baking dish, layer noodles, meat sauce, and mozzarella cheese. Repeat the layers until ingredients are used up, finishing with mozzarella on top.</li>
             <li>Bake – Cover with foil and bake at 375°F (190°C) for about 25-30 minutes. Uncover and bake another 10 minutes until cheese is melted and bubbly.</li>
         </ol>
