Add anchor links to recipes from main page and fix the text of the anchor element that links to the main page from the recipes

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>Lasagna Recipe</h1>
-        <a href="../index.html">Lasagna</a>
+        <a href="../index.html">Main page</a>
         <img src="https://upload.wikimedia.org/wikipedia/commons/f/fe/Lasagna_with_salad%2C_May_2011.jpg" alt="Delicious lasagna">
         <h2>Description</h2>
         <p>Lasagna is the ultimate comfort food—a rich, layered dish of pasta sheets, creamy béchamel sauce, hearty meat or vegetables, and plenty of melted cheese. 
