--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/lasagna.html">Lasagna</a>
+        <ul>
+            <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="./recipes/tzatziki.html">Tzatziki</a></li>
+            <li><a href="./recipes/ramen.html">Ramen</a></li>
+        </ul>
+        
     </body>
 </html>
