--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>Ramen Recipe</h1>
-        <a href="../index.html">Lasagna</a>
+        <a href="../index.html">Main page</a>
         <img src="https://upload.wikimedia.org/wikipedia/commons/f/fe/Lasagna_with_salad%2C_May_2011.jpg" alt="Delicious lasagna">
         <h2>Description</h2>
         <p>Ramen is a popular Japanese noodle soup known for its flavorful broth, tender noodles, and delicious toppings. 
