--- a/recipes/tzatziki.html
+++ b/recipes/tzatziki.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>Tzatziki Recipe</h1>
-        <a href="../index.html">Lasagna</a>
+        <a href="../index.html">Main page</a>
         <img src="https://upload.wikimedia.org/wikipedia/commons/f/fe/Lasagna_with_salad%2C_May_2011.jpg" alt="Delicious lasagna">
         <h2>Description</h2>
         <p>Tzatziki is a refreshing Greek sauce made with yogurt, cucumber, and garlic, perfect as a dip or accompaniment to grilled meats and pita bread.
