Use correct images for tzatziki and ramen

--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -8,7 +8,7 @@
     <body>
         <h1>Ramen Recipe</h1>
         <a href="../index.html">Main page</a>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/f/fe/Lasagna_with_salad%2C_May_2011.jpg" alt="Delicious lasagna">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/9/9a/Sesame_Ramen_%28Ottogi%29_20210908_003.jpg" alt="Homemade Ramen">
         <h2>Description</h2>
         <p>Ramen is a popular Japanese noodle soup known for its flavorful broth, tender noodles, and delicious toppings. 
             Whether spicy, creamy, or soy-based, ramen is a comforting and satisfying meal.</p>
