--- a/recipes/tzatziki.html
+++ b/recipes/tzatziki.html
@@ -8,7 +8,7 @@
     <body>
         <h1>Tzatziki Recipe</h1>
         <a href="../index.html">Main page</a>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/f/fe/Lasagna_with_salad%2C_May_2011.jpg" alt="Delicious lasagna">
+        <img src="https://www.flickr.com/photos/wwny/5674657476" alt="Delicious lasagna">
         <h2>Description</h2>
         <p>Tzatziki is a refreshing Greek sauce made with yogurt, cucumber, and garlic, perfect as a dip or accompaniment to grilled meats and pita bread.
             Its creamy texture and tangy flavor make it a summer favorite.
