--- a/recipes/tzatziki.html
+++ b/recipes/tzatziki.html
@@ -8,7 +8,7 @@
     <body>
         <h1>Tzatziki Recipe</h1>
         <a href="../index.html">Main page</a>
-        <img src="https://www.flickr.com/photos/wwny/5674657476" alt="Tzatziki" height="400" width="400">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/2/22/Tzatziki_IMGP1480.jpg" alt="Tzatziki" height="467" width="310">
         <h2>Description</h2>
         <p>Tzatziki is a refreshing Greek sauce made with yogurt, cucumber, and garlic, perfect as a dip or accompaniment to grilled meats and pita bread.
             Its creamy texture and tangy flavor make it a summer favorite.
