Add basic CSS to the HTML

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="../styles.css">
         <title>Lasagna recipe</title>
     </head>
     <body>
         <h1>Lasagna Recipe</h1>
-        <a href="../index.html">Main page</a>
+        <p>Return to the <a href="../index.html">Main page</a></p>
         <img src="https://upload.wikimedia.org/wikipedia/commons/f/fe/Lasagna_with_salad%2C_May_2011.jpg" alt="Delicious lasagna" height="310" width="467">
         <h2>Description</h2>
         <p>Lasagna is the ultimate comfort food—a rich, layered dish of pasta sheets, creamy béchamel sauce, hearty meat or vegetables, and plenty of melted cheese. 
