--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="../styles.css">
         <title>Ramen recipe</title>
     </head>
     <body>
         <h1>Ramen Recipe</h1>
-        <a href="../index.html">Main page</a>
+        <p>Return to the <a href="../index.html">Main page</a></p>
         <img src="https://upload.wikimedia.org/wikipedia/commons/9/9a/Sesame_Ramen_%28Ottogi%29_20210908_003.jpg" alt="Homemade Ramen" height="180" width="246">
         <h2>Description</h2>
         <p>Ramen is a popular Japanese noodle soup known for its flavorful broth, tender noodles, and delicious toppings. 
