--- a/recipes/tzatziki.html
+++ b/recipes/tzatziki.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="../styles.css">
         <title>Tzatziki recipe</title>
     </head>
     <body>
         <h1>Tzatziki Recipe</h1>
-        <a href="../index.html">Main page</a>
+        <p>Return to the <a href="../index.html">Main page</a></p>
         <img src="https://upload.wikimedia.org/wikipedia/commons/2/22/Tzatziki_IMGP1480.jpg" alt="Tzatziki" height="310" width="467">
         <h2>Description</h2>
         <p>Tzatziki is a refreshing Greek sauce made with yogurt, cucumber, and garlic, perfect as a dip or accompaniment to grilled meats and pita bread.
